新增菜单名称搜索功能